--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Michiel Sikma <michiel@sikma.org>",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^2.4.2"
+    "chalk": "^2.4.2",
+    "glob": "^7.1.4"
   }
 }
